# spine_gnn

./: .gitignore  pyproject.toml  setup.py
gnn/gdl_notebooks/: display_molecules.ipynb  practical_1_part_1_gcn_cora.py  practical_1_part_2_graph_level_preds.py  practical_1_part_3_expressive_gnn.py  practical_2_part_3_expressive_gnn.py  practical_3_part_0a_molecule_pred_pyg.py  practical_3_part_0b_pyg_message_passing.py  practical_3_part_1_2_basic_mpnn_3d.py  practical_3_part_1_mpnn_3d.py  practical_3_part_3_mpnn_3d_rot_trans_invariant.py  practical_3_part_4_equivariant_model.py  practical_3_part_5_dense_vs_sparse_graphs.py  schent.py  schent_modified_script.py  schnet_modified.py  train.py  utils.py  visnet.py
gnn/gdl_notebooks/colab_notebooks/: gdl100_practical_1.py  gdl100_practical_3.py
gnn/scripts/: generate_dataset.py
gnn/spine_graphs/: __init__.py  dataset.py  endplate_graph.py  geometric_features.py  playground.py  train_playground.py  utils.py  utils3d.py  visualization_utils.py
gnn/tests/: test_endplate_graph.py  test_geometric_features.py  test_utils3d.py
